# ai-switch

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202607130001_foundation.sql  202607130002_mcp_servers.sql  202607130003_prompt_assets.sql  202607130004_routing_usage.sql  202607130005_sync_foundation.sql  202607130006_sessions.sql  202607130007_updater.sql  202607130008_managed_instances.sql  202607130009_wakeup_tasks.sql  202607130010_bulk_tags_plugins.sql  202607130011_route_credentials.sql  202607210001_route_proxy_keys.sql  202607220001_route_credential_quota.sql  202607220002_route_credential_quota_windows.sql
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs  paths.rs  server.rs  session_manager.rs  terminal_manager.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/commands/: batch_commands.rs  import_commands.rs  mod.rs  route_credential_commands.rs  route_pool_commands.rs  route_proxy_commands.rs  session_commands.rs  settings_commands.rs  target_commands.rs  terminal_commands.rs  web_service_commands.rs
src-tauri/src/config_writer/: mod.rs
src-tauri/src/core/: mod.rs  sessions.rs  settings.rs  terminals.rs
src-tauri/src/database/: mod.rs  test_support.rs
src-tauri/src/importers/: example_json.rs  mod.rs
src-tauri/src/models/: account.rs  batch.rs  import_job.rs  mod.rs  provider.rs  route_credential.rs  route_pool.rs  settings.rs  target_app.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: batch_service.rs  cpa_import_service.rs  deeplink_service.rs  http_client.rs  import_service.rs  mod.rs  official_agent_identity_service.rs  route_config_service.rs  route_credential_service.rs  route_model_fetch_service.rs  route_model_test_service.rs  route_pool_service.rs  route_preview_service.rs  route_proxy_service.rs  route_quota_service.rs  settings_service.rs  sub2api_import_service.rs  tailscale_service.rs  tailscale_sidecar.rs  tailscale_types.rs  target_service.rs  web_service.rs
src-tauri/src/web/: auth.rs  event_bridge.rs  mod.rs  router.rs  static_assets.rs  ws.rs
src-tauri/src/web/handlers/: mod.rs
(+142 files in other folders)
