[package]
name = "ai-switch"
version = "0.1.0"
description = "AI provider and official account switcher"
authors = ["xyito"]
edition = "2021"
default-run = "ai-switch"

[lib]
name = "ai_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-switch"
path = "src/main.rs"

[[bin]]
name = "ai-switch-server"
path = "src/bin/ai_switch_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "net", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = "3"
sha2 = "0.10"
tempfile = "3"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
portable-pty = "0.8"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
assert_fs = "1"
